🔧 Complete channel/role configuration + 📝 Update README - Separate welcome/CAPTCHA channels, add VERIFIED_ROLE_ID

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,14 @@ GUILD_ID=your_guild_id_here
 # Channel Configuration
 # Replace these with your actual channel IDs
 
+# Channel where welcome messages are sent for new members
+WELCOME_CHANNEL_ID=your_welcome_channel_id
+
 # Channel where CAPTCHA verification happens for new members
-WELCOME_CHANNEL_ID=your_captcha_channel_id
+CAPTCHA_CHANNEL_ID=your_captcha_channel_id
+
+# Role given to members after successful CAPTCHA verification
+VERIFIED_ROLE_ID=your_verified_role_id
 
 # Category where ticket channels will be created
 TICKET_CATEGORY_ID=your_ticket_category_id
